--- a/unit2_projects/week8_cultural_blog.html
+++ b/unit2_projects/week8_cultural_blog.html
@@ -32,7 +32,6 @@
 							<li>
 								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
 							</li>
-							<li><a href="kendallcarey.github.io/cheatsheet.html">Enumerable Cheat Sheet</a></li>
 						</ul>
 					</div>
 					<div class="unit">
@@ -56,7 +55,6 @@
 							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html">Technical Blog #3</a></li>
 							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html">Cultural Blog</a></li>
 						</ul>
-					</li>
 					<div class="unit">
 						<li class="week">Week 5 projects</li>
 						<ul>
@@ -65,14 +63,12 @@
 							<li><a href="https://kendallcarey.github.io/unit2_projects/week2_cultural_blog.html">
 							Cultural Blog</a></li>
 						</ul>
-					</li>
 						<div class="unit">
 							<li class="week">Week 6 projects</li>
 							<ul>
 								<li><a href="https://kendallcarey.github.io/unit2_projects/week3_technical_blog.html">Technical Blog</a></li>
 								<li><a href="https://kendallcarey.github.io/unit2_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 							</ul>
-						</li>
 						</div>
 						<div class="unit">
 				<li class="week">Week 7 projects</li>
@@ -80,19 +76,25 @@
 					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_technical_blog.html">Tech blog #5</a></li>
 					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_cultural_blog.html">Cultural Blog</a></li>
 				</ul>
-				</li>
 				</div>
+				<div class="unit">
+					<li class="week">Week 8 projects</li>
+					<ul>
+						<li><a href="https://kendallcarey.github.io/unit2_projects/week8_technical_blog.html">Tech blog #6</a></li>
+						<li><a href="https://kendallcarey.github.io/unit2_projects/week8_cultural_blog.html">Cultural Blog</a></li>
+					</ul>
 			</ol>
 		</div>
 			<div class="content_area">
-				<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash2/t1.0-9/577062_607947327193_301449043_n.jpg"/>
-				<p><em>Photo by me!</em></p>
-				<p> </p>
-				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." </br>Einstein, Albert in <em>Living Philosophies</em></p>
-				<p></p>
+				<h2>Kitchen verses Table</h2>
+<p id="center">I love this metaphor. Some people are at the table, glancing through the menu, thinking about how much they are spending and the value of everything that is given them. While other people are in the kitchen, in the action. They are there with all the other cooks under stress creating the experience. Dev Bootcamp is what you make of it. You can sit there and look for the value or you can make it valuable.</p>
+<h2>Nerves</h2>
+<p id="center"> I loved how Shereef explained that everyone going in is nervous. Including the teachers. Some people will go in thinking they are the best and they are worried that everything is going to be too easy for them while others think they are going to be the worst in the class and that they are going to fail out. But everyone is nervous about something. Shereef, the king of metaphors, describes a marathon from San Francisco to Seattle. Some people may be five steps or a hundred steps ahead but in the grand scheme of things, they really aren’t that far ahead.
+</p>
+<h2>"I don't know!"</h2>
+<p>I also really connected with the part where he said that as toddlers, not knowing something was kind of exciting because you got to learn something new where as we grow up, not knowing something is failing and so we are constantly trying to avoid saying, “I don’t know.” But pretending we know is not beneficial to learning. As beginners, we don’t have to know, that’s pretty much why we are attending Dev Bootcamp.</p>
+<p>I must say that Shereef’s fireside chat answered a lot of my questions and I am very excited to start classes new week!</p>
 			</div>
-				
-
 			<footer>
 				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
 			</footer>
