--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li>
 								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
 							</li>
-							<li><a href="https://kendallcarey.github.io/cheatsheet.html">Enumerable Cheat Sheet</a></li>
+							<li><a href="https://www.kendallcarey.github.io/cheatsheet.html">Enumerable Cheat Sheet</a></li>
 						</ul>
 					</div>
 					<div class="unit">
