--- a/unit2_projects/week8_cultural_blog.html
+++ b/unit2_projects/week8_cultural_blog.html
@@ -86,6 +86,7 @@
 			</ol>
 		</div>
 			<div class="content_area">
+				<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTLMEYFV15Oa3xS5kvnXH9zzB4NFo-OcwUEoaOEsdCv3bumkWhO"/>
 				<h2>Kitchen verses Table</h2>
 <p id="center">I love this metaphor. Some people are at the table, glancing through the menu, thinking about how much they are spending and the value of everything that is given them. While other people are in the kitchen, in the action. They are there with all the other cooks under stress creating the experience. Dev Bootcamp is what you make of it. You can sit there and look for the value or you can make it valuable.</p>
 <h2>Nerves</h2>
