one slight change

--- a/unit2_projects/week8_technical_blog.html
+++ b/unit2_projects/week8_technical_blog.html
@@ -148,7 +148,7 @@ Or Regex, which you have probably heard them referred to as, is a special text s
 <li>options: i case insensitive, m make dot match newlines, x ignore whitespace in regex, o perform #{...} substitutions only once</li>
 <li>all escaped characters start with \</li>
 
-<p id="center">So breaking down \b[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}\b uses the any word boundaries, any character a to z and 0 to 9 one or more characters adds it to a string, adds the @, takes any character a to z, 0 to 9  then adds a ‘.’ and uses between 2 and 4 characters between a to z. This searches for an email address. Any email address. Pretty cool right? Fun stuff.
+<p id="center">So breaking down <span>\b[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}\b</span> uses the any word boundaries, any character a to z and 0 to 9 one or more characters adds it to a string, adds the @, takes any character a to z, 0 to 9  then adds a ‘.’ and uses between 2 and 4 characters between a to z. This searches for an email address. Any email address. Pretty cool right? Fun stuff.
 </p>
 			</div>
 			<footer>
