--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 		<body>
 			<div class="site">
 				<header>
-					<h1 class="title"><a href="https://kendallcarey.github.io"><span id="first">Kendall's Blog</span>Dot Dot Dot</a></h1>
+					<h1 class="title"><a href="https://kendallcarey.github.io"><span id="first">Kendall's Bloggety</span></a></h1>
 					<div class="navbar">
-					<div class="home"><a href="https://kendallcarey.github.io">Home</a></div>
+					<div class="home"><a href="https://kendallcarey.github.io/contact">Contact</a></div>
 					<div class="portfolio"><a href="">Portfolio</a></div>
 					<div class="bloggety"><a href="https://kendallcarey.github.io/index">Bloggety</a></div>
-					<div class="about"><a href="https://kendallcarey.github.io/background">About</span></a></div>
-					<div class="contact"><a href="https://kendallcarey.github.io/contact">Contact</a></div>
+					<div class="contact"><a href="https://kendallcarey.github.io/about">About</a></div>
 					</div>
 	 		</div>
 				</header>
